[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Materials/GreenGlowing.tres" type="Material" id=2]
[ext_resource path="res://BlenderModels/Kangaroo/Kangaroo.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.871888, 2.09575, 0.618087 )

[sub_resource type="SphereMesh" id=3]

[node name="Enemy" type="KinematicBody" groups=[
"Enemies",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0247793, 0.0172901, -0.0246429 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.5, 0 )
shape = SubResource( 1 )

[node name="HitZone" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00382233, 1.37292, 0.352045 )

[node name="CollisionShape" type="CollisionShape" parent="HitZone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00736046, -2.32443, -1.50454 )
shape = SubResource( 2 )

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="Kangaroo" parent="." instance=ExtResource( 3 )]
transform = Transform( -0.35, 0, -5.28485e-08, 0, 0.35, 0, 5.28485e-08, 0, -0.35, 0, 2.247, -0.387 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 2.95667, -0.671544 )
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="OmniLight" type="SpotLight" parent="MeshInstance2"]
transform = Transform( 6.4817, 0, 0, 0, 6.4817, 0, 0, 0, 6.4817, 0, 0, 0 )
light_color = Color( 0.929412, 0.0627451, 0.0627451, 1 )
spot_range = 13.6689
spot_angle = 48.1034

[node name="OmniLight2" type="OmniLight" parent="MeshInstance2"]
transform = Transform( 6.4817, 0, 0, 0, 6.4817, 0, 0, 0, 6.4817, 0.438588, 0.298971, -1.57953 )
light_color = Color( 0.886275, 0.0588235, 0.0588235, 1 )
omni_range = 0.615437

[connection signal="body_entered" from="HitZone" to="." method="_on_HitZone_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
